Index changed into html, add ajax functions

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <title>Olakease</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
+  />
 </head>
 
 <body>
 
-  <form class="form-horizontal" action="" method="post">
+  <form class="form-horizontal" id="formComs" action="" method="post">
     <fieldset>
 
       <legend>Sistema d'enviament automàtic de correus</legend>
