All functions and templates declared

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <label class="col-md-4 control-label" for="dataMigracio">Data migració</label>
         <div class="col-md-4">
           <div class='input-group date' id='dataMigracio'>
-            <input type='text' class="form-control" placeholder="Ex: 12/12/2012" readonly/>
+            <input type='text' id="dataMigracio" name="dataMigracio" class="form-control" placeholder="Ex: 12/12/2012" readonly/>
             <span class="input-group-addon">
 <span class="glyphicon glyphicon-calendar"></span>
             </span>
