Fix, ja mostra continguts

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="form-group">
         <label class="col-md-4 control-label" for="send">Enviar correu</label>
         <div class="col-md-4">
-          <input id="send" type="button" name="send" class="btn btn-primary" value="Enviar" onclick="showDiv()">
+          <button id="send" type="submit" name="send" class="btn btn-primary" onclick="showDiv()">Enviar</button>
         </div>
       </div>
     </fieldset>
